Bug #6170
closedCompile error: "implicit declaration of function 'pthread_get_stackaddr_np'", "'pthread_get_stacksize_np'"
Description
=begin
When compiling Ruby 1.9.3 (I've tested 1.9.3p0 and 1.9.3p125), (({thread_pthread.c})) produces a compile error.
The following is the GCC output for the error:
compiling thread.c
In file included from thread.c:204:
thread_pthread.c: In function 'get_stack':
thread_pthread.c:508: error: implicit declaration of function 'pthread_get_stackaddr_np'
thread_pthread.c:508: warning: assignment makes pointer from integer without a cast
thread_pthread.c:509: error: implicit declaration of function 'pthread_get_stacksize_np'
make: *** [thread.o] Error 1
I have (({pthread.h})) in my standard include library (which defines those functions), but my best guess is that for some reason (({thread_pthread.c})) doesn't see it. This is coming from the file (({thread.c})), which includes (({thread_pthread.c})) if that makes any difference.
==== Environment
GCC version: 4.0.1
OS: Mac OS X 10.4.11 Intel
=end
Updated by mame (Yusuke Endoh) over 14 years ago
- Status changed from Open to Assigned
- Assignee set to sorah (Sorah Fukumori)
Sorah, do you know anything about this error?
--
Yusuke Endoh mame@tsg.ne.jp
Updated by nobu (Nobuyoshi Nakada) over 14 years ago
- Status changed from Assigned to Rejected
Mac OS X prior to 10.5 has not been supported ever.