* thread_pthread.c: add prototype declarations for older Mac OS X.   [ruby-core:43376][Bug #6170]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35280 b2dd03c8-39d4-4d8f-98ff-823fe69b080e